# mechanismSerology

./: .gitignore  README.md  benchmark.ipynb  distributions.ipynb  forward-backward.ipynb  genFigure.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: black.yml  build.yml  code_quality.yml  pytest.yml  test.yml
fast_soft_sort/: numpy_ops.py
manuscript/: 01.abstract.md  02.introduction.md  03.results.md  04.discussion.md
maserol/: SpaceX_modelloss.p  SpaceX_optparams.pkl  atyeo_modelloss.pkl  atyeo_optparams.pkl  binding.py  classify.py  compare_samples.py  concentration.py  core.py  correlation.py  dataImport.py  data_configs.yaml  data_preparation.py  datasets.py  decompose.py  figure_utils.py  fixKav_opt_helpers.py  fixKav_optimization.py  fixkav_opt.py  fixkav_opt_figures.py  fixkav_opt_helpers.py  fixkav_sample.py  forward_backward.py  heatmap.py  import.py  import_alter.py  import_atyeo.py  import_kaplonek.py  impute.py  inverse.py  linear.py  mechanistic.py  model.py  plot_distributions.py  plots.py  predictAbundKa.py  predictAbundKa_atyeo.py  preprocess.py  regression.py  resample.py  (+7 more)
maserol/data/: alter.py  amino-acid-mass.csv  atyeo.py  cellrep-affinities.csv  detection-mass.csv  human-affinities.csv  kaplonek.py
maserol/data/cache/: 2f_perturbations.nc  2f_perturbations_backup.nc  3e.csv  alter_Rtot.csv  assay_optimize_2_lig.csv  assay_optimize_2_lig_backup.csv  assay_optimize_3_lig.csv  assay_optimize_3_lig_backup.csv  fig_3b_imputation.txt  fig_3b_res_mask.txt  fig_3c_metrics.csv  fig_5a_Rtot.csv  fig_5b_Rtot.csv  fig_6_Rtot.csv  fig_7_FcR2B_FcR3B.csv  fig_7_FcR3A_FcR3B.csv  fig_S2.csv  figure_2b_Rtot.txt  figure_2b_Rtot_inferred.txt  figure_2c_Rtot.txt  figure_2c_Rtot_inferred.txt  figure_2d.csv  figure_2e.csv  figure_4_fucose.csv  impute_var_ds_size.csv  kaplonek_Rtot.csv  kaplonek_vaccine_Rtot.csv  zohar_Rtot.csv
maserol/figures/: common.py  correlation.py  figure0.py  figure2.py  figure3.py  figure4.py  figureA1.py  figureA2.py  figureA3.py  figureA4.py  figureA5.py  figureA6.py  figureS1.py  figureS2.py  figureS3.py  figure_2.py  figure_2a.py  figure_2b.py  figure_2c.py  figure_2d.py  figure_2e.py  figure_3.py  figure_3a.py  figure_3b.py  figure_3c.py  figure_3c_and_supplemental.py  figure_3d.py  figure_3e.py  figure_4.py  figure_4ab.py  figure_4b.py  figure_4c.py  figure_4d.py  figure_5.py  figure_5a.py  figure_5b.py  figure_6.py  figure_7.py  figure_KxStar.py  figure_LLigO.py  (+25 more)
maserol/test/: test_core.py  test_decompose.py  test_import.py  test_import_alter.py  test_import_atyeo.py  test_import_kaplonek.py  test_mechanistic.py  test_model.py  test_predictAbundKa.py  test_preprocess.py  test_resample.py  test_tensor.py
