[tool.poetry]
name = "maserol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^1.5"
scipy = "^1.10"
numpy = "^1.24"
matplotlib = "^3.5.2"
seaborn = ">=0.11.2"
tensordata = {git = "https://github.com/meyer-lab/tensordata.git", branch = "main"}
scikit-learn = "^1.1.2"
PyYAML = ">=6.0"
statsmodels = "^0.14.0"
tensorly = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
mypy = "^0.991"
valentbind = {git = "https://github.com/meyer-lab/valentBind.git", branch = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "maserol.figures.common:genFigure"
