[tool.poetry]
name = "maserol"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^1.5"
scipy = "^1.10"
numpy = "^1.24"
matplotlib = "3.8.4"
seaborn = ">=0.11.2"
tensordata = {git = "https://github.com/meyer-lab/tensordata.git", branch = "main"}
scikit-learn = "^1.1.2"
PyYAML = ">=6.0"
statsmodels = "^0.14.0"
tensorly = "^0.8.1"
statannotations = "^0.6.0"
requests = "^2.31.0"
setuptools = "^69.5.1"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
mypy = "^0.991"
valentbind = {git = "https://github.com/meyer-lab/valentBind.git", branch = "main"}
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "maserol.figures.common:genFigure"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]