[project]
name = "maserol"
version = "0.1.0"
description = "Quantifying antibody Fc species in systems serology."
authors = [
    { name = "Armaan Abraham", email = "armaanabraham@g.ucla.edu" },
    { name = "Aaron Meyer", email = "ameyer@ucla.edu" },
]
dependencies = [
    "tensordata @ git+https://github.com/meyer-lab/tensordata.git@main",
    "pandas<2.0,>=0.23.0",
    "scipy>=1.14.1",
    "matplotlib>=2.0,<=3.7",
    "seaborn>=0.11",
    "scikit-learn>=1.5.2",
    "numpy<=2.0,>=1.24",
    "statsmodels>=0.14.3",
    "statannotations>=0.6.0",
    "requests>=2.32.3",
    "valentbind @ git+https://github.com/meyer-lab/valentBind.git@main",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["maserol"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]

[project.scripts]
fbuild = "maserol.figures.common:genFigure"
